--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "textmate"]
-	path = extensions/textmate
-	url = https://github.com/defunkt/textmate.el.git
 [submodule "extensions/nxhtml"]
 	path = extensions/nxhtml
 	url = https://github.com/emacsmirror/nxhtml.git
@@ -10,3 +7,9 @@
 [submodule "extensions/magit"]
 	path = extensions/magit
 	url = https://github.com/magit/magit.git
+[submodule "extensions/haml-mode"]
+	path = extensions/haml-mode
+	url = https://github.com/nex3/haml-mode.git
+[submodule "extensions/textmate"]
+	path = extensions/textmate
+	url = https://github.com/defunkt/textmate.el.git
