Added Anything and UndoTree

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "extensions/haml-mode"]
 	path = extensions/haml-mode
 	url = git://github.com/nex3/haml-mode.git
+[submodule "extensions/anything-config"]
+	path = extensions/anything-config
+	url = git://repo.or.cz/anything-config.git
+[submodule "extensions/undo-tree"]
+	path = extensions/undo-tree
+	url = http://www.dr-qubit.org/git/undo-tree.git
