--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "extensions/flymake-haml"]
 	path = extensions/flymake-haml
 	url = git://github.com/purcell/flymake-haml.git
+[submodule "extensions/yaml-mode"]
+	path = extensions/yaml-mode
+	url = git://github.com/yoshiki/yaml-mode.git
