--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "extensions/yaml-mode"]
 	path = extensions/yaml-mode
 	url = git://github.com/yoshiki/yaml-mode.git
+[submodule "extensions/php-mode"]
+	path = extensions/php-mode
+	url = git://github.com/ejmr/php-mode.git
