--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,12 @@
 [submodule "extensions/flymake-css"]
 	path = extensions/flymake-css
 	url = git://github.com/purcell/flymake-css.git
+[submodule "extensions/color-theme-solarized"]
+	path = extensions/color-theme-solarized
+	url = git://github.com/sellout/emacs-color-theme-solarized.git
+[submodule "extensions/color-theme-tango-2"]
+	path = extensions/color-theme-tango-2
+	url = git://github.com/wfarr/color-theme-tango-2.git
+[submodule "extensions/color-theme-zenburn"]
+	path = extensions/color-theme-zenburn
+	url = git://github.com/bbatsov/zenburn-emacs.git
