--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "extensions/puppet-mode"]
 	path = extensions/puppet-mode
 	url = https://github.com/puppetlabs/puppet-syntax-emacs.git
+[submodule "extensions/markdown-mode"]
+	path = extensions/markdown-mode
+	url = https://github.com/emacsmirror/markdown-mode.git
