--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendor/evernote-mode"]
 	path = vendor/evernote-mode
 	url = https://github.com/pymander/evernote-mode.git
+[submodule "vendor/fill-column-indicator"]
+        path = vendor/fill-column-indicator
+        url = https://github.com/alpaker/Fill-Column-Indicator.git
