--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendor/evernote-mode"]
        path = vendor/evernote-mode
        url = https://github.com/pymander/evernote-mode.git
+[submodule "vendor/tickscript-mode"]
+	path = vendor/tickscript-mode
+	url = https://github.com/whatyouhide/tickscript-mode
