[globals] Fix globals setup

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "vendor/git-emacs"]
 	path = vendor/git-emacs
-	url = git://github.com/tsgates/git-emacs.git
+	url = https://github.com/tsgates/git-emacs.git
 [submodule "vendor/evernote-mode"]
        path = vendor/evernote-mode
        url = https://github.com/pymander/evernote-mode.git
